--- a/index.css
+++ b/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Lora&display=swap');
+
 :root {
   /* CSS HEX */
   --opal: #a7c5c1;
@@ -5,14 +7,15 @@
   --english-violet: #4d2d52;
   --deep-space-sparkle: #4d6a6d;
   --saffron: #e1bc29;
-  --off-white: #000000;
+  --off-white: #FFFFFF;
 }
 
 body {
+  padding: 15px;
   background-color: var(--opal);
   background-image: url("wp_bground.png");
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: 'Lora', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -22,4 +25,31 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+#title {
+  font-size: 18pt;
+  margin: auto;
+  text-align: center;
+  background-color: rgba(255, 255, 255, 0.6);
+}
+
+.center-p {
+  margin: auto;
+  padding: 15px;
+  width: 30%;
+  background-color: rgba(255, 255, 255, 0.3);
+}
+
+.right-margin {
+  background-color: rgba(255, 255, 255, 0.7);
+  padding: 15px;
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 20%;
+}
+
+.sub-li {
+  font-size: 10pt;
 }
