--- a/gcsp.css
+++ b/gcsp.css
@@ -11,7 +11,6 @@
 }
 
 body {
-  padding: 10px;
   background-color: var(--opal);
   background-image: url("wp_bground.png");
   margin: 0;
@@ -27,25 +26,36 @@ code {
     monospace;
 }
 
-#title {
-  font-size: 18pt;
-  margin: auto;
-  width: 75%;
+#sidebar {
+  position: fixed;
+  font-size: 1.5vw;
+  vertical-align: top;
+  width: 400px;
+  height: 100%;
   text-align: center;
-  background-color: rgba(255, 255, 255, 0.6);
+  background-color: var(--off-white);
 }
 
 .center-p {
   margin: auto;
-  width: 75%;
+  margin-left: 405px;
   padding: 15px;
   background-color: rgba(255, 255, 255, 0.3);
 }
 
-.icon-bar {
-  position: fixed;
-  padding-left: 3px;
-  padding-bottom: 3px;
-  bottom: 0;
-  left: 0;
+.gc-title {
+  font-size: 1.5vw;
+  color: var(--deep-space-sparkle);
+}
+
+@media screen and (max-width: 800px) {
+  #sidebar {
+    width: 100%;
+    height: auto;
+    position: relative;
+  }
+
+  .center-p {
+    margin: auto;
+  }
 }
