--- a/gcsp.css
+++ b/gcsp.css
@@ -49,6 +49,11 @@ code {
   color: #444;
 }
 
+#sidebar a {
+  text-decoration: none;
+  color: var(--deep-space-sparkle);
+}
+
 .sidebar-link {
   left: 0;
   text-align: left;
@@ -57,7 +62,7 @@ code {
   border-left: 8px solid hsla(0, 0%, 0%, 0);
 }
 
-div.sidebar-link a {
+div.sidebar-link {
   font-weight: 400;
   font-size: 24pt;
   text-decoration: none;
