--- a/index.css
+++ b/index.css
@@ -11,7 +11,6 @@
 }
 
 body {
-  padding: 1% 25% 5% 15%; /* up right down left */
   background-color: var(--opal);
   background-image: url("wp_bground.png");
   margin: 0;
@@ -27,17 +26,98 @@ code {
     monospace;
 }
 
-#title {
-  font-size: 18pt;
-  margin: auto;
+#grid-layout {
+  display: grid;
+  grid-template-columns: 325px auto auto auto auto;
+  height: 100vh;
+  width: 100vw;
+  overflow: hidden;
+}
+
+/* SIDEBAR CSS */
+#sidebar {
+  grid-column-start: 1;
+  grid-column-end: 2;
+
+  vertical-align: top;
+  box-shadow: 0 0 6px 0 hsla(0, 0%, 0%, 0.4);
   text-align: center;
-  background-color: rgba(255, 255, 255, 0.6);
+  background-color: var(--off-white);
+}
+
+#sidebar h1 {
+  font-weight: 800;
+  font-size: 36pt;
+  color: #111;
+}
+
+#sidebar h2 {
+  font-weight: 400;
+  font-size: 16pt;
+  color: #444;
+}
+
+#sidebar a {
+  text-decoration: none;
+  color: var(--deep-space-sparkle);
+}
+
+.sidebar-link {
+  left: 0;
+  text-align: left;
+  padding: 20px;
+  padding-left: 35px;
+  border-left: 8px solid hsla(0, 0%, 0%, 0);
+}
+
+div.sidebar-link {
+  font-weight: 400;
+  font-size: 24pt;
+  text-decoration: none;
+  color: #444;
+}
+
+div.sidebar-link:hover {
+  background-color: hsla(0, 0%, 0%, 0.05);
+  border-left: 8px solid var(--opal);
+}
+
+.sidebar-current {
+  font-weight: 500;
+  color: #111;
+  background-color: hsla(0, 0%, 0%, 0.1);
+  padding-left: -5px;
+  border-left: 8px solid var(--opal);
+}
+
+
+
+#main-content {
+  grid-column-start: 2;
+  grid-column-end: 6;
+
+  width: 100%;
+  overflow-y: scroll;
+  padding: 20px;
+}
+
+#tabs {
+  max-width: 50%;
 }
 
 .center-p {
   margin: auto;
-  padding: 15px;
+  padding: 10px 30px 10px 30px; /* up right down left */
   background-color: rgba(255, 255, 255, 0.3);
+  box-shadow: 0 2px 2px 0 hsla(0, 0%, 0%, 0.2);
+}
+
+.center-p p {
+  text-align: justify;
+}
+
+.center-p h1 {
+  color: var(--deep-space-sparkle);
 }
 
 .icon-bar {
