--- a/index.css
+++ b/index.css
@@ -31,7 +31,6 @@ code {
   grid-template-columns: 325px auto auto auto auto;
   height: 100vh;
   width: 100vw;
-  overflow: hidden;
 }
 
 /* SIDEBAR CSS */
@@ -79,7 +78,7 @@ div.sidebar-link {
 
 div.sidebar-link:hover {
   background-color: hsla(0, 0%, 0%, 0.05);
-  border-left: 8px solid var(--opal);
+  border-left: 8px solid var(--new-york-pink);
 }
 
 .sidebar-current {
@@ -96,13 +95,24 @@ div.sidebar-link:hover {
   grid-column-start: 2;
   grid-column-end: 6;
 
-  width: 100%;
-  overflow-y: scroll;
-  padding: 20px;
+  margin: 0 50px; /* up right down left */
+  overflow: auto;
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
+
+#main-content::-webkit-scrollbar {
+  display: none;
 }
 
 #tabs {
   max-width: 50%;
+  margin: auto;
+}
+
+#welcome-splash {
+  margin: 20px auto;
+  max-width: 60%;
 }
 
 .center-p {
@@ -126,16 +136,6 @@ div.sidebar-link:hover {
   padding-bottom: 3px;
   bottom: 0;
   left: 0;
-}
-
-.right-margin {
-  background-color: rgba(255, 255, 255, 0.7);
-  padding: 15px;
-  position: fixed;
-  top: 0;
-  right: 0;
-  width: 20%;
-  height: 100%;
 }
 
 .sub-li {
