--- a/gcsp.css
+++ b/gcsp.css
@@ -10,32 +10,30 @@
   --off-white: #FFFFFF;
 }
 
-#sidebar {
-  position: fixed;
-  vertical-align: top;
-  width: 325px;
-  height: 100%;
-  top: 0;
-  box-shadow: 0 0 6px 0 hsla(0, 0%, 0%, 0.4);
-  text-align: center;
-  background-color: var(--off-white);
+#mission td {
+  vertical-align: center;
+  padding: 25px;
 }
 
-#body {
-  margin: 25px 100px 50px 415px; /* up right down left */
+#waterAndLearning td {
+  vertical-align: top;
+  padding: 25px;
+  width: 50%;
 }
 
 #profile-pic {
   max-height: 275px;
-  float: right;
-  top: 0;
-  margin: 0 0 10px 20px; /* up right down left */
+  padding-top: 10px;
 }
 
-#challenge-squares {
-  margin-top: 50px;
-  display: grid;
-  grid-gap: 50px;
+#water, #learning {
+  height: 50px;
+  float: left;
+  margin-right: 10px;
+}
+
+.mission-header {
+  color: #000000;
 }
 
 .grand-challenge {
@@ -55,16 +53,6 @@
 .grand-challenge img {
   float: left;
   margin: 20px 20px 20px 0px; /* up right down left */
-}
-
-.water {
-  grid-column-start: 1;
-  grid-column-end: 2;
-}
-
-.learning {
-  grid-column-start: 2;
-  grid-column-end: 3;
 }
 
 
