--- a/global.css
+++ b/global.css
@@ -14,9 +14,7 @@ body {
   background-color: var(--opal);
   background-image: url("wp_bground.png");
   margin: 0;
-  font-family: 'Lora', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Lora', 'Garamond', 'Times New Roman', Serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -26,7 +24,47 @@ code {
     monospace;
 }
 
-/* TODO: get sidebar in here with grid display */
+
+h1 {
+  color: var(--deep-space-sparkle);
+}
+
+p {
+  text-align: justify;
+}
+
+#grid-layout {
+  display: grid;
+  grid-template-columns: 325px auto auto auto auto;
+  height: 100vh;
+  width: 100vw;
+}
+
+#main-content {
+  grid-column-start: 2;
+  grid-column-end: 6;
+
+  margin: 0 50px; /* up right down left */
+  padding: 20px;
+  overflow: auto;
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
+
+#main-content::-webkit-scrollbar {
+  display: none;
+}
+
+/* SIDEBAR CSS */
+#sidebar {
+  grid-column-start: 1;
+  grid-column-end: 2;
+
+  vertical-align: top;
+  box-shadow: 0 0 6px 0 hsla(0, 0%, 0%, 0.4);
+  text-align: center;
+  background-color: var(--off-white);
+}
 
 #sidebar h1 {
   font-weight: 800;
@@ -97,14 +135,6 @@ div.sidebar-link:hover {
   padding: 10px 30px 10px 30px; /* up right down left */
   background-color: rgba(255, 255, 255, 0.3);
   box-shadow: 0 2px 2px 0 hsla(0, 0%, 0%, 0.2);
-}
-
-.center-p p {
-  text-align: justify;
-}
-
-.center-p h1 {
-  color: var(--deep-space-sparkle);
 }
 
 
