--- a/zenGarden/style.css
+++ b/zenGarden/style.css
@@ -7,40 +7,108 @@
 html {
 	margin: 0;
 	padding: 0;
-	}
+}
 body {
-	font: 100% 'Play', sans-serif;
+	font: 110% 'Play', sans-serif;
 	color: #555753;
 	background: url("https://opengameart.org/sites/default/files/seamless%20space_0.PNG");
 	margin: 0;
 	padding: 0;
 	}
+h1 {
+	color: #FFF0C9;
+	font-size: 36pt;
+	text-align: center;
+	text-shadow: 2px 2px #000000;
+	margin: 10px;
+}
+h2 {
+	color: 	#478be7;
+	text-align: center;
+	text-shadow: 2px 2px #000000;
+	margin: 10px;
+}
 h3 {
-	color: #FFFFFF;
+	color: #FFF0C9;
+	text-shadow: 2px 2px #000000;
+	text-align: center;
+	font-size: 18pt;
 }
 p {
 	background-color: #FFFFFF;
-	position: fixed;
-	left: 0;
-	bottom: 0;
 	width: 300px;
-	font: italic 1.1em/2.2 georgia;
-	text-align: center;
+	left: 0; bottom: 0;
+	padding: 15px;
+	margin: 0;
+	text-align: justify;
 	display: none;
 }
 
 #zen-intro header {
 	background-image: url("../img/sun.png");
 	background-size: 200px 200px;
+	background-repeat: no-repeat;
+	background-position: center;
 	left: 615px;
   position: absolute;
   top: 250px;
-	height: 200px;
-	width: 200px;
+	height: 300px;
+	width: 300px;
 
 	color: #FFFFFF;
 	font: 'Play';
 	font-weight: 700;
+}
+
+/* top menu bar */
+.sidebar {
+	position: fixed;
+	top: 0; left: 0;
+	padding-left: 70px; padding-right: 50px; padding-top: 10px;
+	width: 100%; height: 40px;
+	background-color: #FFFFFF;
+}
+
+.sidebar h3 {
+	display: inline;
+	color: #000000;
+	text-shadow: 2px 2px #c0c0c0;
+}
+
+.sidebar div {
+	float: left;
+	position: relative;
+}
+
+.sidebar nav {
+	visibility: hidden;
+}
+
+.sidebar ul {
+	list-style-type: none;
+	background-color: #FFFFFF;
+	margin: 10px; padding: 10px 15px 10px 15px;
+	border: 2px solid #000000;
+}
+
+.zen-resources ul {
+	visibility: hidden;
+}
+
+.zen-resources {
+	margin-left: 75px;
+}
+
+.design-selection:hover ul {
+	visibility: visible;
+}
+
+.design-archives:hover ul {
+	visibility: visible;
+}
+
+.zen-resources:hover ul {
+	visibility: visible;
 }
 
 /* specific divs */
@@ -150,12 +218,14 @@ p {
 }
 .requirements:hover p {
 	display: block;
-	right: 0; top: 0;
-	width: 200px;
 }
 
 footer {
+	position: fixed;
 	text-align: center;
+	bottom: 0; right: 0;
+	padding-left: 20px; padding-top: 5px; padding-bottom: 5px;
+	background-color: #FFFFFF;
 	}
 footer a:link, footer a:visited {
 	margin-right: 20px;
