--- a/dnd/index.css
+++ b/dnd/index.css
@@ -57,8 +57,8 @@ ul {
   display: none;
 
   content-align: center;
-  grid-template-columns: auto auto auto;
-  grid-template-rows: auto auto;
+  grid-template-columns: auto auto auto auto auto;
+  grid-template-rows: auto auto auto;
   column-gap: 10px;
   row-gap: 15px;
   color: var(--DarkBlack);
@@ -69,7 +69,7 @@ ul {
 
 #charName {
   grid-column-start: 1;
-  grid-column-end: span 1;
+  grid-column-end: span 3;
   grid-row-start: 1;
   grid-row-end: 1;
 
@@ -82,8 +82,8 @@ ul {
 }
 
 #charLvl {
-  grid-column-start: 2;
-  grid-column-end: 2;
+  grid-column-start: 3;
+  grid-column-end: 4;
   grid-row-start: 1;
   grid-row-end: 1;
 
@@ -92,8 +92,8 @@ ul {
 }
 
 #charClass {
-  grid-column-start: 3;
-  grid-column-end: 3;
+  grid-column-start: 4;
+  grid-column-end: 5;
   grid-row-start: 1;
   grid-row-end: 1;
 
@@ -103,11 +103,27 @@ ul {
 }
 
 #charSpells {
+  grid-column-start: 1;
+  grid-column-end: 3;
   grid-row-start: 2;
   grid-row-end: 2;
+}
+
+#charSpells h3 {
+  text-decoration: bold;
+  font-size: 1.2rem;
+  letter-spacing: 0.2rem;
+  text-transform: uppercase;
 }
 
 #charWeapons {
   grid-row-start: 2;
   grid-row-end: 2;
+}
+
+#comingSoon {
+  grid-column-start: 1;
+  grid-column-end: 5;
+  grid-row-start: 3;
+  grid-row-end: 3;
 }
