--- a/index.css
+++ b/index.css
@@ -51,6 +51,15 @@ body {
   -o-object-fit: cover;
      object-fit: cover;
 }
+#main-hero #hero-right #photo-credit {
+  direction: ltr;
+  opacity: 0.5;
+  font-size: 8pt;
+  bottom: 0;
+  right: 0;
+  position: absolute;
+  padding-right: 3px;
+}
 
 #about-me {
   background-color: #C6CCCC;
