--- a/index.css
+++ b/index.css
@@ -1,7 +1,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Istok+Web:ital,wght@0,400;0,700;1,400;1,700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Just+Me+Again+Down+Here&display=swap");
 body {
   margin: 0;
   font-family: "Istok Web", "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
+
+h2 {
+  margin: 0;
 }
 
 #main-hero {
@@ -9,15 +14,15 @@ body {
   color: #FFFFFF;
   display: flex;
   flex-direction: row;
-  width: 100vw;
   min-height: 100vh;
+  width: 100vw;
 }
 #main-hero #hero-left {
+  align-items: flex-start;
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
-  vertical-align: middle;
   padding: 3em;
+  vertical-align: middle;
   width: 50%;
 }
 #main-hero #hero-left #hero-title {
@@ -46,19 +51,19 @@ body {
   width: 50%;
 }
 #main-hero #hero-right img {
-  width: 100%;
   height: 100vh;
   -o-object-fit: cover;
      object-fit: cover;
+  width: 100%;
 }
 #main-hero #hero-right #photo-credit {
-  direction: ltr;
-  opacity: 0.5;
-  font-size: 8pt;
   bottom: 0;
-  right: 0;
-  position: absolute;
+  direction: ltr;
+  font-size: 8pt;
+  opacity: 0.5;
   padding-right: 3px;
+  position: absolute;
+  right: 0;
 }
 
 #about-me {
@@ -66,8 +71,8 @@ body {
   color: #30251D;
   display: flex;
   flex-direction: row;
-  width: 100vw;
   min-height: 100vh;
+  width: 100vw;
 }
 #about-me h2 {
   font-size: 24pt;
@@ -93,9 +98,9 @@ body {
   padding: 0;
 }
 #about-me #about-left {
+  align-items: center;
   display: flex;
   flex-direction: column;
-  align-items: center;
   padding: 0 50px;
   width: 60%;
 }
@@ -106,8 +111,8 @@ body {
 #about-me #about-right {
   display: flex;
   flex-direction: column;
-  position: relative;
   padding: 0 50px;
+  position: relative;
   width: 40%;
 }
 #about-me #about-right #skill-lists {
@@ -117,18 +122,119 @@ body {
   display: none; /* still working out how to animate this! */
 }
 #about-me #about-right #trees {
-  position: absolute;
   bottom: 0;
-  right: 0;
-  margin-right: 15%;
   height: auto;
   line-height: 0;
+  margin-right: 15%;
+  position: absolute;
+  right: 0;
 }
 #about-me #about-right #trees #tree-1 {
   height: 100px;
 }
 #about-me #about-right #trees #tree-2 {
   height: 75px;
+}
+
+#projects-section {
+  align-items: center;
+  background-color: #42432D;
+  color: #FFFFF3;
+  display: flex;
+  flex-direction: column;
+  padding-bottom: 50px;
+}
+#projects-section h2 {
+  font-size: 24pt;
+  padding: 2rem 0; /* top-bottom, left-right */
+}
+#projects-section #project-cards {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 50px; /* row gap, column gap */
+  justify-content: center;
+  margin: auto;
+  max-width: 1000px;
+}
+
+/* FOOTER */
+#footer {
+  color: #C6CCCC;
+  display: flex;
+  align-items: center;
+  font-family: "Just Me Again Down Here";
+  justify-content: space-between;
+  background-color: #30251D;
+  height: 100px;
+}
+#footer .icon-bar {
+  width: 200px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+}
+#footer .credits {
+  padding: 0 10px;
+  margin: 0;
+}
+
+/* CARD STYLES & ANIMATION */
+.card {
+  background-color: transparent;
+  height: 240px;
+  perspective: 1000px;
+  width: 250px;
+  /* Style the front side */
+  /* Style the back side */
+}
+.card p {
+  margin: 0;
+}
+.card .card-inner {
+  align-items: center;
+  background-color: #C6CCCC;
+  border-radius: 5px;
+  box-shadow: 5px 5px 10px #30251D; /* offset-x | offset-y | blur-radius | color */
+  color: #30251D;
+  display: flex;
+  flex-direction: column;
+  font-family: "Just Me Again Down Here";
+  font-size: 24pt;
+  height: 100%;
+  position: relative;
+  text-align: center;
+  transform-style: preserve-3d;
+  transition: transform 0.8s;
+  width: 100%;
+}
+.card:hover .card-inner {
+  transform: rotateY(180deg); /* rotate card on hover */
+}
+.card .card-front, .card .card-back {
+  backface-visibility: hidden;
+  height: 100%;
+  position: absolute;
+  width: 100%;
+}
+.card .card-front h3 {
+  margin: 0;
+}
+.card .card-front .card-img {
+  height: 150px;
+  height: 60%;
+  margin: 0 auto;
+  overflow: hidden;
+  padding-top: 20px;
+  width: 200px;
+}
+.card .card-front .card-img img {
+  height: 100%;
+}
+.card .card-back {
+  background-color: #C6CCCC;
+  transform: rotateY(180deg);
 }
 
 /* MOBILE */
@@ -161,9 +267,6 @@ body {
   #about-me #about-left #about-text {
     margin: 0;
     max-width: 100%;
-  }
-  #about-me #about-right h2 {
-    margin: 0;
   }
   #about-me #about-right #skill-lists {
     width: auto;
