--- a/index.scss
+++ b/index.scss
@@ -209,7 +209,11 @@ h2 { margin: 0; }
     perspective: 1000px;
     width: 250px;
 
-    p { margin: 0; }
+    p {
+        font-size: 18pt;
+        line-height: 1;
+        margin: 0 10px;
+    }
 
     .card-inner {
         align-items: center;
