--- a/index.scss
+++ b/index.scss
@@ -14,10 +14,14 @@ $default-font: 'Istok Web';
 
 body { 
     margin: 0; 
-    font-family: $default-font, 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
+    font-family: $default-font, 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 18px;
 }
 
-h2 { margin: 0; }
+h2 {
+    margin: 0;
+    font-size: 32px;
+}
 
 #main-hero {
     background-color: $deepBrown;
@@ -40,7 +44,7 @@ h2 { margin: 0; }
             max-width: 500px;
             width: fit-content;
 
-            #description-tags { font-size: 30px; }
+            #description-tags { font-size: 32px; }
 
             #webdev { color: $lightGreen; }
             
@@ -81,8 +85,6 @@ h2 { margin: 0; }
     flex-direction: row;
     min-height: 100vh;
     width: 100vw;
-
-    h2 { font-size: 24pt; }
 
     a {
         color: $rust;
@@ -163,7 +165,6 @@ h2 { margin: 0; }
     padding-bottom: 50px;
 
     h2 {
-        font-size: 24pt;
         padding: 2rem 0; /* top-bottom, left-right */
     }
 
@@ -280,7 +281,7 @@ h2 { margin: 0; }
     #main-hero {
         #hero-right, #hero-left { width: 100%; }
         #hero-left {
-            padding: 10px;
+            padding: 20px;
             margin: auto;
         }
 
@@ -293,7 +294,7 @@ h2 { margin: 0; }
     }
 
     #about-me {
-        #about-right, #about-left { width: auto; padding: 0 50px; }
+        #about-right, #about-left { width: auto; padding: 20px 50px; }
         #about-left {
             align-items: flex-start;
             padding-bottom: 20px;
@@ -307,6 +308,6 @@ h2 { margin: 0; }
 
 @media screen and (max-width: 450px) {
     #about-me {
-        #about-right, #about-left { width: auto; padding: 0 20px; }
+        #about-right, #about-left { width: auto; padding: 20px; }
     }
 }
